# SquareFinder

./: CMakeLists.txt  README.md
project/: main.cpp
project/criteriaSquareSelector/: config.hpp  criteriaSquareSelector.cpp  criteriaSquareSelector.hpp
project/shapes/: circle.cpp  circle.hpp  square.cpp  square.hpp  types.hpp
